--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                                                 <a href="about.html">About</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Features</a>
+                                                <a href="features.html">Features</a>
                                             </li>
                                             <li class=""> 
                                                 <a href="index.html">Gallery</a>
