--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                               </div>
                             </div>
                             <div class="col-lg-10 text-right">
-                                <div class="rs-menu-area">
+                                <div class="rs-menu-area justify-content-end">
                                     <div class="main-menu">
                                       <div class="mobile-menu">
                                           <a class="rs-menu-toggle">
@@ -101,10 +101,10 @@
                                                 <a href="index.html">Home</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Courses</a>
+                                                <a href="courses.html">Courses</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Syllabus</a>
+                                                <a href="syllabus.html">Syllabus</a>
                                             </li>
                                             <li class="current-menu-item"> 
                                                 <a href="about.html">About</a>
@@ -113,10 +113,10 @@
                                                 <a href="features.html">Features</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Gallery</a>
+                                                <a href="gallery.html">Gallery</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Contact</a>
+                                                <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
                                                 <a href="index.html">Reviews</a>
