--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                                                 <a href="index.html">Home</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Courses</a>
+                                                <a href="courses.html">Courses</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Syllabus</a>
+                                                <a href="syllabus.html">Syllabus</a>
                                             </li>
                                             <li class=""> 
                                                 <a href="about.html">About</a>
@@ -113,10 +113,10 @@
                                                 <a href="features.html">Features</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Gallery</a>
+                                                <a href="gallery.html">Gallery</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Contact</a>
+                                                <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
                                                 <a href="index.html">Reviews</a>
@@ -182,7 +182,7 @@
                             <img src="assets/images/services/1.jpg" alt="">
                             <div class="content-part">
                                 <img src="assets/images/services/icons/1.png" alt="">
-                                <h4 class="title"><a href="#">About US</a></h4>
+                                <h4 class="title"><a href="about.html">About US</a></h4>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                             <img src="assets/images/services/1.jpg" alt="">
                             <div class="content-part">
                                 <img src="assets/images/services/icons/2.png" alt="">
-                                <h4 class="title"><a href="#">Courses</a></h4>
+                                <h4 class="title"><a href="courses.html">Courses</a></h4>
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
                             <img src="assets/images/services/1.jpg" alt="">
                             <div class="content-part">
                                 <img src="assets/images/services/icons/3.png" alt="">
-                                <h4 class="title"><a href="#">Syllabus</a></h4>
+                                <h4 class="title"><a href="syllabus.html">Syllabus</a></h4>
                             </div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                             <img src="assets/images/services/1.jpg" alt="">
                             <div class="content-part">
                                 <img src="assets/images/services/icon/1.png" alt="">
-                                <h4 class="title"><a href="#">Features</a></h4>
+                                <h4 class="title"><a href="features.html">Features</a></h4>
                             </div>
                         </div>
                     </div>
