--- a/courses.html
+++ b/courses.html
@@ -119,7 +119,7 @@
                                                 <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Reviews</a>
+                                                <a href="reviews.html">Reviews</a>
                                             </li>
 
                                          </ul> <!-- //.nav-menu -->
@@ -239,6 +239,113 @@
 
 
 
+            <!-- Counter Section Start -->
+            <div id="rs-about" class="rs-about style3 pt-100 md-pt-70">
+                <div class="container">
+                    <div class="row y-middle">
+                        <div class="col-lg-6 lg-pr-0 md-mb-30">
+                            <div class="about-intro">
+                                <div class="sec-title">
+                                    <div class="sub-title orange"></div>
+                                    <h2 class="title mb-21">Language courses</h2>
+                                    <div class="desc big">
+                                        
+                                        <div class="content">
+                                            <div id="accordion" class="accordion-box">
+                                                <div class="card accordion block">
+                                                    <div class="card-header" id="headingOne">
+                                                        <h5 class="mb-0">
+                                                            <button class="btn btn-link acc-btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">English</button>
+                                                        </h5>
+                                                    </div>
+
+                                                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                                        <div class="card-body acc-content current">
+                                                            <div class="content white-bg pt-30 px-0">
+                                                                <!-- Cource Overview -->
+                                                                <div class="course-overview">
+                                                                    <div class="inner-box">
+                                                                        <h3>Career development programs</h3>
+                                                                        <ul class="review-list">
+                                                                            <li>Spoken English</li>
+                                                                            <li>IELTS</li>
+                                                                            <li>TOEFL</li>
+                                                                            <li>PRE</li>
+                                                                            <li>YLE</li>
+                                                                        </ul>
+                                                                        <h3>Personality development programs</h3>
+                                                                        <ul class="review-list">
+                                                                            <li>Communication skills</li>			<li>Basic English for speaking</li>
+                                                                                <li>Leadership skills</li>			<li>Overcoming fears</li>
+                                                                                <li>Public speaking</li>				<li>Letter writing</li>
+                                                                                <li>Proper pronunciation</li>			<li>Total personality development</li>
+                                                                                <li>Resume writing</li>				<li>Group discussions</li>
+                                                                                <li>General awareness of rules and regulations</li>
+                                                                        </ul>
+                                                                        
+                                                                    </div>
+                                                                </div>                                                
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card accordion block">
+                                                    <div class="card-header" id="headingTwo">
+                                                        <h5 class="mb-0">
+                                                            <button class="btn btn-link acc-btn collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Hindi</button>
+                                                        </h5>
+                                                    </div>
+                                                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                                        <div class="card-body acc-content">
+                                                            <div class="course-overview">
+                                                                <div class="inner-box">
+                                                                    <h3>Hindi</h3>
+                                                                    <ul class="review-list">
+                                                                        <li>Prathmic Madhyama</li>	<li>Rashtrabasha Praveshika</li>
+                                                                        <li>Visharad poorvardh</li>		<li>Visharad Uttharardth</li>
+                                                                        <li>Praveen Poorvardh</li>		<li>Praveen Uttharardth</li>
+
+                                                                    </ul>
+                                                                </div>
+                                                            </div> 
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card accordion block">
+                                                    <div class="card-header" id="headingThree">
+                                                        <h5 class="mb-0">
+                                                            <button class="btn btn-link acc-btn collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Tamil </button>
+                                                        </h5>
+                                                    </div>
+                                                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                                        <div class="card-body acc-content">
+                                                            <div class="course-overview">
+                                                            <h3>Tamil</h3>
+                                                                <ul class="review-list">
+                                                                    <li>Practices for Reading and Writing</li>
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>                                             
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 pl-83 md-pl-15">
+                            <div class="img-part js-tilt">
+                                <img src="assets/images/language.jpg" alt="images">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Counter Section End -->
+
+
             <!-- Section bg Wrap 2 start -->
             <div class="pt-5">
                 <br>
@@ -327,6 +434,8 @@
         <script src="assets/js/plugins.js"></script>
         <!-- magnific popup js -->
         <script src="assets/js/jquery.magnific-popup.min.js"></script>  
+        <!-- tilt js -->
+        <script src="assets/js/tilt.jquery.min.js"></script>   
         <!-- contact form js -->
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
