--- a/features.html
+++ b/features.html
@@ -119,7 +119,7 @@
                                                 <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Reviews</a>
+                                                <a href="reviews.html">Reviews</a>
                                             </li>
 
                                          </ul> <!-- //.nav-menu -->
@@ -168,10 +168,10 @@
                             <div class="degree-wrap">
                                 <img src="assets/images/degrees/1.jpg" alt="">
                                 <div class="title-part">
-                                    <h4 class="title">Trained Professors</h4>
+                                    <h4 class="title">Trained Teachers</h4>
                                 </div>
                                 <div class="content-part">
-                                    <h4 class="title"><a href="#">Trained Professors</a></h4>
+                                    <h4 class="title"><a href="#">Trained Teachers</a></h4>
                                     <p class="desc">Our faculty members have extensive teaching expertise at reputable Institutions.</p>
                                 </div>
                             </div>
