--- a/gallery.html
+++ b/gallery.html
@@ -119,7 +119,7 @@
                                                 <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Reviews</a>
+                                                <a href="reviews.html">Reviews</a>
                                             </li>
 
                                          </ul> <!-- //.nav-menu -->
