--- a/reviews.html
+++ b/reviews.html
@@ -17,12 +17,18 @@
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
         <!-- animate css -->
         <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+        <!-- owl.carousel css -->
+        <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.css">
+        <!-- slick css -->
+        <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
         <!-- off canvas css -->
         <link rel="stylesheet" type="text/css" href="assets/css/off-canvas.css">
         <!-- linea-font css -->
         <link rel="stylesheet" type="text/css" href="assets/fonts/linea-fonts.css">
         <!-- flaticon css  -->
         <link rel="stylesheet" type="text/css" href="assets/fonts/flaticon.css">
+        <!-- magnific popup css -->
+        <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
         <!-- Main Menu css -->
         <link rel="stylesheet" href="assets/css/rsmenu-main.css">
         <!-- spacing css -->
@@ -103,7 +109,7 @@
                                             <li class=""> 
                                                 <a href="courses.html">Courses</a>
                                             </li>
-                                            <li class="current-menu-item"> 
+                                            <li class=""> 
                                                 <a href="syllabus.html">Syllabus</a>
                                             </li>
                                             <li> 
@@ -118,7 +124,7 @@
                                             <li class=""> 
                                                 <a href="contact.html">Contact</a>
                                             </li>
-                                            <li class=""> 
+                                            <li class="current-menu-item"> 
                                                 <a href="reviews.html">Reviews</a>
                                             </li>
 
@@ -148,85 +154,109 @@
                     <img src="assets/images/breadcrumbs/2.jpg" alt="Breadcrumbs Image">
                 </div>
                 <div class="breadcrumbs-text white-color">
-                    <h1 class="page-title">Syllabus</h1>
+                    <h1 class="page-title">Reviews</h1>
                     <ul>
                         <li>
                             <a class="active" href="index.html">Home</a>
                         </li>
-                        <li>Syllabus</li>
+                        <li>Reviews</li>
                     </ul>
                 </div>
             </div>
             <!-- Breadcrumbs End -->
 
-            <div class="rs-services style7 pt-100 md-pt-70">
+            <!-- Testimonial Section Start -->
+            <div class="rs-testimonial style5 gray-bg pt-110 pb-120 md-pt-70 md-pb-80">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6 md-mb-30">
-                            <div class="services-item">
-                                <div class="img-part">
-                                    <img src="assets/images/services/bg/1.png" alt="images"> 
-                                </div>
-                                <div class="content-part">
-                                   <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/1.png" alt="images"> 
-                                   </div>
-                                    <h4 class="title"><a href="#">CBSE</a></h4>
-                                        <p class="desc"></p>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-lg-3 col-md-6 md-mb-30">
-                            <div class="services-item">
-                                <div class="img-part">
-                                    <img src="assets/images/services/bg/2.png" alt="images"> 
-                                </div>
-                                <div class="content-part">
-                                   <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/2.png" alt="images"> 
-                                   </div>
-                                    <h4 class="title"><a href="#">STATE BOARD</a></h4>
-                                        <p class="desc"></p>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-lg-3 col-md-6 md-mb-30">
-                            <div class="services-item">
-                                <div class="img-part">
-                                    <img src="assets/images/services/bg/3.png" alt="images"> 
-                                </div>
-                                <div class="content-part">
-                                   <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/3.png" alt="images"> 
-                                   </div>
-                                    <h4 class="title"><a href="#">ICSE</a></h4>
-                                        <p class="desc"></p>
+                    <div class="sec-title mb-15 text-center">
+                        <h2 class="title extra-bold mb-15 sm-mb-10">What Our Client Says</h2>
+                        <div class="sub-title capitalize">Our Clients Review</div>
+                    </div>
+                    <div class="rs-carousel owl-carousel" 
+                        data-loop="true" 
+                        data-items="3" 
+                        data-margin="30" 
+                        data-autoplay="true" 
+                        data-hoverpause="true" 
+                        data-autoplay-timeout="5000" 
+                        data-smart-speed="800" 
+                        data-dots="true" 
+                        data-nav="false" 
+                        data-nav-speed="false" 
+
+                        data-md-device="3" 
+                        data-md-device-nav="false" 
+                        data-md-device-dots="true" 
+                        data-center-mode="false"
+
+                        data-ipad-device2="2" 
+                        data-ipad-device-nav2="false" 
+                        data-ipad-device-dots2="true"
+
+                        data-ipad-device="2" 
+                        data-ipad-device-nav="false" 
+                        data-ipad-device-dots="true" 
+
+                        data-mobile-device="1" 
+                        data-mobile-device-nav="false" 
+                        data-mobile-device-dots="false">
+                        <div class="testi-item">
+                            <div class="author-desc">                                
+                                <div class="desc"><img class="quote" src="assets/images/quote.png" alt="">
+                                    I am Madhesh, A student of this my guru academy. Before I joined I was worse in every subject. After joining here, my grades sky rocketed, Thank you sir, and all the teachers
                                 </div>
                             </div>
-                        </div> 
-                        <div class="col-lg-3 col-md-6">
-                            <div class="services-item">
-                                <div class="img-part">
-                                    <img src="assets/images/services/bg/4.png" alt="images"> 
-                                </div>
-                                <div class="content-part">
-                                   <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/4.png" alt="images"> 
-                                   </div>
-                                    <h4 class="title"><a href="#">IGCSE</a></h4>
-                                        <p class="desc"></p>
-                                </div>
+                            <div class="author-part">
+                                <a class="name" href="#">Madhesh</a>
+                                <span class="designation">Student</span>
+                            </div>
+                        </div>
+                        <div class="testi-item">
+                            <div class="author-desc">
+                                <div class="desc"><img class="quote" src="assets/images/quote.png" alt="">My Guru Acdemy  is a very good coaching class for higher class students...sir is also teaching in a very good manner..good maintenance and well qualified teachers..HATSS OF SIR</div>
+                            </div>
+                            <div class="author-part">
+                                <a class="name" href="#">Ramya</a>
+                                <span class="designation">Student</span>
+                            </div>
+                        </div>
+                        <div class="testi-item">
+                            <div class="author-desc">
+                                <div class="desc"><img class="quote" src="assets/images/quote.png" alt="">We searched hindi tuition centre in our residing area. Finally found this centre. Hindi teacher is very dedicated and kind. She is very strict in academic. Thank you madam.</div>
+                            </div>
+                            <div class="author-part">
+                                <a class="name" href="#">Kalpana Ramanathan</a>
+                                <span class="designation">Parent</span>
+                            </div>
+                        </div>
+                        <div class="testi-item">
+                            <div class="author-desc">
+                                <div class="desc"><img class="quote" src="assets/images/quote.png" alt="">Science sir is a great teacher who patiently listens to students' pain points and maps out the lesson plan accordingly.
+                                    <br>
+                                    He breaks down concepts and explains it in a manner that is easily understood. His method of teaching encourages students to be more inclined towards learning science. My son's interest and grades have improved, thanks to science sir.
+                                    </div>
+                            </div>
+                            <div class="author-part">
+                                <a class="name" href="#">Karthikeyan</a>
+                                <span class="designation">Parent</span>
+                            </div>
+                        </div>
+                        <div class="testi-item">
+                            <div class="author-desc">
+                                <div class="desc"><img class="quote" src="assets/images/quote.png" alt="">I am a student in this tuition centre. All the concepts are very clear and very useful for solving problems.</div>
+                            </div>
+                            <div class="author-part">
+                                <a class="name" href="#">Venkatesh</a>
+                                <span class="designation">Student</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Testimonial Section End -->
 
             <!-- Section bg Wrap 2 start -->
             <div class="pt-5">
-                <br>
-                <br>
-                <br>
                 <!-- Newsletter section start -->
                 <div class="rs-newsletter style1 mb--124 sm-mb-0 sm-pb-70">
                     <div class="container">
@@ -304,12 +334,27 @@
         <script src="assets/js/rsmenu-main.js"></script> 
         <!-- op nav js -->
         <script src="assets/js/jquery.nav.js"></script>
+        <!-- owl.carousel js -->
+        <script src="assets/js/owl.carousel.min.js"></script>
+        <!-- Slick js -->
+        <script src="assets/js/slick.min.js"></script>
+        <!-- isotope.pkgd.min js -->
+        <script src="assets/js/isotope.pkgd.min.js"></script>
+        <!-- imagesloaded.pkgd.min js -->
+        <script src="assets/js/imagesloaded.pkgd.min.js"></script>
         <!-- wow js -->
-        <script src="assets/js/wow.min.js"></script>     
+        <script src="assets/js/wow.min.js"></script>
+        <!-- Skill bar js -->
+        <script src="assets/js/skill.bars.jquery.js"></script>
+        <script src="assets/js/jquery.counterup.min.js"></script>        
+         <!-- counter top js -->
+        <script src="assets/js/waypoints.min.js"></script>
+        <!-- video js -->
+        <script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
+        <!-- magnific popup js -->
+        <script src="assets/js/jquery.magnific-popup.min.js"></script>      
         <!-- plugins js -->
         <script src="assets/js/plugins.js"></script>
-        <!-- magnific popup js -->
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>  
         <!-- contact form js -->
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
