--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                                                 <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Reviews</a>
+                                                <a href="reviews.html">Reviews</a>
                                             </li>
 
                                          </ul> <!-- //.nav-menu -->
@@ -177,28 +177,8 @@
                             </div>
                         </div>
                         <div class="col-lg-8 pl-83 md-pl-15">
-                            <div class="row rs-counter couter-area">
-                                <div class="col-md-4 sm-mb-30">
-                                    <div class="counter-item one">
-                                        <img class="count-img" src="assets/images/about/style3/icons/1.png" alt="">
-                                        <h2 class="number rs-count kplus">2</h2>
-                                        <h4 class="title mb-0">Students</h4>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 sm-mb-30">
-                                    <div class="counter-item two">
-                                        <img class="count-img" src="assets/images/about/style3/icons/2.png" alt="">
-                                        <h2 class="number rs-count">3.50</h2>
-                                        <h4 class="title mb-0">Average CGPA</h4>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="counter-item three">
-                                        <img class="count-img" src="assets/images/about/style3/icons/3.png" alt="">
-                                        <h2 class="number rs-count percent">95</h2>
-                                        <h4 class="title mb-0">Graduates</h4>
-                                    </div>
-                                </div>
+                            <div class="img-part js-tilt">
+                                <img src="assets/images/about.png" alt="images">
                             </div>
                         </div>
                     </div>
@@ -361,6 +341,8 @@
         <script src="assets/js/plugins.js"></script>
         <!-- magnific popup js -->
         <script src="assets/js/jquery.magnific-popup.min.js"></script>  
+        <!-- tilt js -->
+        <script src="assets/js/tilt.jquery.min.js"></script>   
         <!-- contact form js -->
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
