--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                                                 <a href="contact.html">Contact</a>
                                             </li>
                                             <li class=""> 
-                                                <a href="index.html">Reviews</a>
+                                                <a href="reviews.html">Reviews</a>
                                             </li>
 
                                          </ul> <!-- //.nav-menu -->
@@ -199,7 +199,8 @@
                         <div class="col-lg-8">
                             <!-- Map Section Start --> 
                             <div class="contact-map">
-                                <iframe scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=T83,%202nd%20Floor,%20Sri%20Vignesh%20building%20Near%20Bus%20Terminus%20Kovaipudur+(My%20Guru%20Academy)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="600" frameborder="0"><a href="https://www.gps.ie/sport-gps/">bike gps</a></iframe>
+                                <iframe scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=T83,%202nd%20Floor,%20Sri%20Vignesh%20building%20Near%20Bus%20Terminus%20Kovaipudur,%20Coimbatore%20%E2%80%93%20641042%20+(My%20Guru%20Academy)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="600" frameborder="0"><a href="https://www.maps.ie/distance-area-calculator.html">distance maps</a></iframe>
+                                
                             </div>
                             <!-- Map Section End -->
                         </div>
